# dbmet

./: .gitignore  404.html  CargaInmet2DB.py  CargaOpmetToMongoDB2.py  Makefile  README.md  amdar.sh  index.html  inmet.sh  mfas.sh  mfas_req.sh  opmet.sh  ptuh.sh  pyproject.toml  radar.sh  rainh.sh  requirements.txt  stsc.sh  stsc2bdc.sh  stsc2mongo.sh  wndh.sh  xtras.sh
.github/workflows/: clsim-app.yml  dbmet-app.yml
amdar/: amd_data_redemet.py  amd_defs.py  amd_send_bdc.py  carga_amdar.py  utl_dates.py
data/: mnd
inmet/: carga_inmet.py  inm_bdc.py  inm_defs.py  inm_dw.py
mfas/: mfas.py  mfas_db.py  mfas_defs.py  mfas_load.py  mfas_req.py  xxx
mfas/data/: 221205.mnd
mfas/data/test/: mfas.2022-12-08_14:45:00.txt  mfas.2022-12-08_15:00:00.txt  mfas.2022-12-08_15:15:00.txt  mfas.2022-12-08_15:30:00.txt  mfas.2022-12-08_15:45:00.txt  mfas.2022-12-08_16:00:00.txt  mfas.2022-12-08_16:15:00.txt  mfas.2022-12-08_16:30:00.txt  mfas.2022-12-08_16:45:00.txt  mfas.2022-12-08_17:00:00.txt  (+362 more)
opmet/: CargaOpmetToMongoDB2.py  carga_opmet.py  carga_opmet_2025-03-11_15-08-31.err  opm_db.py  opm_defs.py  opm_fncs.py  opm_logs.py  tst_defs.py  tst_log.py
pptw/: glb_defs.py  mng_db.py  ptu_his.py  rain_his.py  wnd_his.py
radar/: rad_data_redemet.py  rad_defs.py  radar_image.py
stsc/: carga_stsc.py  erro.txt  stsc2bdc.py  stsc2mongo.py  stsc_bdc.py  stsc_data_redemet.py  stsc_defs.py  stsc_mongo.py  stsc_send_bdc.py  utl_dates.py
tests/: test_amdar.py  test_utils.py  test_worker.py
utils/: utl_dates.py
wnd_h/: wnd_db.py  wnd_defs.py  wnd_his.py
