[tool.poetry]
name = "dbmet"
version = "0.1.0"
description = "BDC load stuff"
authors = ["Milton Abrunhosa <miltonmla@decea.mil.br>"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
